--- a/preparazione.ipynb
+++ b/preparazione.ipynb
@@ -9,10 +9,22 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3.9.1 64-bit"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.7",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
+    "interpreter": {
+      "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
     }
   },
   "cells": [
@@ -27,67 +39,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "source": [
-        "import tensorflow as tf\n",
-        "import tensorflow.keras as keras\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import *"
+        "import numpy \n",
+        "import pandas as pd"
       ],
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'pandas'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/var/folders/_h/6lhxqf4j20g868gxsth5pt4h0000gn/T/ipykernel_19391/542286988.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+          ]
+        }
+      ],
       "metadata": {
         "id": "7a_ZTH3ScAD_"
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "##Definisce il modello"
-      ],
-      "metadata": {
-        "id": "83ro0LDGcQcP"
-      }
-    },
-    {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "source": [
-        "## crea rete semplice\n",
         "\n",
-        "def create_baseline(dimensione_di_input):\n",
-        "    # create model\n",
-        "    model = Sequential()\n",
-        "    model.add(Dense(10, input_dim=dimensione_di_input, kernel_initializer='normal', activation='relu'))\n",
-        "    model.add(Dense(1, kernel_initializer='normal', activation='sigmoid'))\n",
-        "    # Compile model. We use the the logarithmic loss function, and the Adam gradient optimizer.\n",
-        "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-        "    return model\n",
-        "\n",
-        "model = create_baseline(100) #100 è un input di test\n",
-        "\n",
-        "print(model.summary())\n",
-        "\n",
-        "#sarà così\n",
-        "#model.fit(input_preprocessato,output(si/no))"
+        "# Load and preview data \n",
+        "recruit = pd.read_csv(\"Placement_Data_Full_Class.train.csv\")"
       ],
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model: \"sequential_3\"\n",
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "dense_6 (Dense)              (None, 10)                1010      \n",
-            "_________________________________________________________________\n",
-            "dense_7 (Dense)              (None, 1)                 11        \n",
-            "=================================================================\n",
-            "Total params: 1,021\n",
-            "Trainable params: 1,021\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n",
-            "None\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'pd' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/var/folders/_h/6lhxqf4j20g868gxsth5pt4h0000gn/T/ipykernel_18670/2263100074.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Load and preview data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mrecruit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Placement_Data_Full_Class.train.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mrecruit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
           ]
         }
       ],
