--- a/preparazione.ipynb
+++ b/preparazione.ipynb
@@ -9,7 +9,7 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3.9.1 64-bit"
+      "display_name": "Python 3.9.7 64-bit"
     },
     "language_info": {
       "name": "python",
@@ -39,21 +39,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 67,
       "source": [
+        "\n",
+        "\n",
         "import numpy \n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "!pip install -U \"scikit-learn==0.23.1\"\n",
+        "from sklearn.model_selection import train_test_split\n"
       ],
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'pandas'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/var/folders/_h/6lhxqf4j20g868gxsth5pt4h0000gn/T/ipykernel_19391/542286988.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: scikit-learn==0.23.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.23.1)\n",
+            "Requirement already satisfied: joblib>=0.11 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.0.1)\n",
+            "Requirement already satisfied: scipy>=0.19.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.7.1)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (2.2.0)\n",
+            "Requirement already satisfied: numpy>=1.13.3 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.20.1)\n"
           ]
         }
       ],
@@ -63,22 +67,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "source": [
         "\n",
         "# Load and preview data \n",
-        "recruit = pd.read_csv(\"Placement_Data_Full_Class.train.csv\")"
+        "data = pd.read_csv(\"Placement_Data_Full_Class.train.csv\")\n",
+        "#recruit.head()\n",
+        "\n",
+        "\n",
+        "x = data.drop(['status','salary'], axis=1)\n",
+        "y = data['status']\n",
+        "\n",
+        "\n",
+        "# split into train test sets\n",
+        "train, test = train_test_split(data, test_size=0.33, random_state=42)\n",
+        "print(train.shape)\n",
+        "print(test.shape)\n",
+        "\n",
+        "train.to_csv(r'train.csv')\n",
+        "test.to_csv(r'test.csv')\n",
+        "\n",
+        "# split train and test dataset\n",
+        "#train_x, test_x, train_y, test_y = train_test_split(x,y , test_size=0.3, random_state=42)\n",
+        "\n",
+        "#print(train_x.shape)\n",
+        "#print(train_y.shape)\n",
+        "\n",
+        "#print(\"x\")\n",
+        "#print(train_x)\n",
+        "#print(\"y\")\n",
+        "#print(train_y)"
       ],
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'pd' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/var/folders/_h/6lhxqf4j20g868gxsth5pt4h0000gn/T/ipykernel_18670/2263100074.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Load and preview data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mrecruit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Placement_Data_Full_Class.train.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mrecruit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(115, 14)\n",
+            "(57, 14)\n"
           ]
         }
       ],
