--- a/preparazione.ipynb
+++ b/preparazione.ipynb
@@ -39,10 +39,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 81,
       "source": [
-        "\n",
-        "\n",
         "import numpy \n",
         "import pandas as pd\n",
         "!pip install -U \"scikit-learn==0.23.1\"\n",
@@ -54,10 +52,10 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: scikit-learn==0.23.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.23.1)\n",
-            "Requirement already satisfied: joblib>=0.11 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.0.1)\n",
-            "Requirement already satisfied: scipy>=0.19.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.7.1)\n",
+            "Requirement already satisfied: numpy>=1.13.3 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.20.1)\n",
             "Requirement already satisfied: threadpoolctl>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (2.2.0)\n",
-            "Requirement already satisfied: numpy>=1.13.3 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.20.1)\n"
+            "Requirement already satisfied: scipy>=0.19.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.7.1)\n",
+            "Requirement already satisfied: joblib>=0.11 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.0.1)\n"
           ]
         }
       ],
@@ -67,16 +65,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 82,
       "source": [
         "\n",
         "# Load and preview data \n",
         "data = pd.read_csv(\"Placement_Data_Full_Class.train.csv\")\n",
-        "#recruit.head()\n",
-        "\n",
-        "\n",
-        "x = data.drop(['status','salary'], axis=1)\n",
-        "y = data['status']\n",
         "\n",
         "\n",
         "# split into train test sets\n",
@@ -84,11 +77,10 @@
         "print(train.shape)\n",
         "print(test.shape)\n",
         "\n",
-        "train.to_csv(r'train.csv')\n",
-        "test.to_csv(r'test.csv')\n",
-        "\n",
         "# split train and test dataset\n",
-        "#train_x, test_x, train_y, test_y = train_test_split(x,y , test_size=0.3, random_state=42)\n",
+        "# x = data.drop(['status','salary'], axis=1)\n",
+        "# y = data['status']\n",
+        "# train_x, test_x, train_y, test_y = train_test_split(x,y , test_size=0.3, random_state=42)\n",
         "\n",
         "#print(train_x.shape)\n",
         "#print(train_y.shape)\n",
@@ -115,6 +107,16 @@
         "id": "Nhsp7J9icMZB",
         "outputId": "4bf0f1d0-1850-4892-9303-d5f6c430d77c"
       }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 83,
+      "source": [
+        "train.to_csv(r'train.csv')\n",
+        "test.to_csv(r'test.csv')"
+      ],
+      "outputs": [],
+      "metadata": {}
     }
   ]
 }
