--- a/preparazione.ipynb
+++ b/preparazione.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 84,
       "source": [
         "import numpy \n",
         "import pandas as pd\n",
@@ -51,11 +51,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: scikit-learn==0.23.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.23.1)\n",
+            "Collecting scikit-learn==0.23.1\n",
+            "  Using cached scikit_learn-0.23.1-cp39-cp39-macosx_10_15_x86_64.whl\n",
             "Requirement already satisfied: numpy>=1.13.3 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.20.1)\n",
             "Requirement already satisfied: threadpoolctl>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (2.2.0)\n",
             "Requirement already satisfied: scipy>=0.19.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.7.1)\n",
-            "Requirement already satisfied: joblib>=0.11 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.0.1)\n"
+            "Requirement already satisfied: joblib>=0.11 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-learn==0.23.1) (1.0.1)\n",
+            "Installing collected packages: scikit-learn\n",
+            "  Attempting uninstall: scikit-learn\n",
+            "    Found existing installation: scikit-learn 0.24.2\n",
+            "    Uninstalling scikit-learn-0.24.2:\n",
+            "      Successfully uninstalled scikit-learn-0.24.2\n",
+            "Successfully installed scikit-learn-0.23.1\n"
           ]
         }
       ],
@@ -65,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 85,
       "source": [
         "\n",
         "# Load and preview data \n",
@@ -110,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 86,
       "source": [
         "train.to_csv(r'train.csv')\n",
         "test.to_csv(r'test.csv')"
